fix vh bug on mobile

--- a/src/sass/_project.scss
+++ b/src/sass/_project.scss
@@ -94,6 +94,7 @@ $quote-height: 8.5rem;
 
     svg {
       display: block;
+      max-width: 100%;
     }
 
     .underline {
